# cpp-cmake-vscode-example

./: CMakeLists.txt  CMakePresets.json  README.md
src/executable/: CMakeLists.txt  main.cpp
